Fix for non valid values in Exif field ISOSpeedRatings reported in bug https://bugs.kde.org/show_bug.cgi?id=304439

BUG: 304439